--- a/be-node/package.json
+++ b/be-node/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-openapi": "^12.1.3",
+    "prom-client": "^15.1.3",
+    "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
