--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,12 @@ services:
       - app-network
 
   be_python:
-    build: ./be-python
+    build:
+      context: .
+      dockerfile: be-python/Dockerfile
+    # volumes:
+      # - ./be-python:/app
+      # - ./users.json:/app/users.json
     ports: 
       - "8001:8001"
     networks:
@@ -32,13 +37,15 @@ services:
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
 
   be_node:
-    build: ./be-node
-    ports: 
+    build:
+      context: .
+      dockerfile: be-node/Dockerfile
+    # volumes:
+    #   - ./be-node:/app
+    ports:
       - "8002:8002"
     networks:
       - app-network
-    environment:
-      - PORT=8002
     command: ["node", "index.js"]
 
 networks:
