refactor(app): renaming to fastapi and express

--- a/be-fastapi/Dockerfile
+++ b/be-fastapi/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9
 
 WORKDIR /app
 
-COPY be-python/requirements.txt .
+COPY be-fastapi/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY be-python/ ./
+COPY be-fastapi/ ./
 
-COPY sqlite.db ./python.db
+COPY sqlite.db ./fastapi.db
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
