--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,12 +3,12 @@ global:
 
 scrape_configs:
 
-  - job_name: 'be_python'
+  - job_name: 'fastapi'
     metrics_path: /metrics
     static_configs:
-      - targets: ['be_python:8001']
+      - targets: ['fastapi:8001']
 
-  - job_name: 'be_node'
+  - job_name: 'express'
     metrics_path: /metrics
     static_configs:
-      - targets: ['be_node:8002']
+      - targets: ['express:8002']
