--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,20 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_RENDERING_SERVER_URL=http://renderer:8081/render
+      - GF_RENDERING_CALLBACK_URL=http://grafana:3000/
+      - GF_LOG_FILTERS=rendering:debug
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
       - prometheus
+    networks:
+      - app-network
+
+  renderer:
+    image: grafana/grafana-image-renderer:latest
+    ports:
+    - "8081:8081"
     networks:
       - app-network
 
