--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,11 @@ services:
       - "8001:8001"
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "512M"
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
 
   express:
@@ -67,6 +72,11 @@ services:
       - "8002:8002"
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "512M"
     command: ["node", "index.js"]
 
 networks:
