--- a/be-fastapi/requirements.txt
+++ b/be-fastapi/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.111.0
-uvicorn==0.29.0
-pydantic==2.7.1
-sqlalchemy==2.0.30
-prometheus_client==0.20.0
+fastapi==0.116.1
+uvicorn==0.35.0
+pydantic==2.11.7
+sqlalchemy==2.0.41
+prometheus_client==0.22.1
+aiosqlite==0.21.0
